# dalle2-img-gen

./: .gitignore  pyproject.toml
src/: main.py
