[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Jacob Millner", email = "jacob.millner@outlook.com"},
]
dependencies = [
    "dalle2-pytorch>=0.6.16",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
